--- a/web/src/components/api/form/FormPanel.css
+++ b/web/src/components/api/form/FormPanel.css
@@ -27,6 +27,9 @@
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     padding-bottom: 24px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .form-container-header {
@@ -34,6 +37,14 @@
 }
 
 .form-panel-form {
+    width: 100%;
+    height: 100%;
+    padding-left: 24px;
+    padding-right: 24px;
+    /*overflow-y: auto;*/
+}
+
+.form-panel-form-child {
     width: 100%;
     height: 100%;
     padding-left: 24px;
