--- a/web/src/components/generator/model/Mysql.css
+++ b/web/src/components/generator/model/Mysql.css
@@ -15,5 +15,32 @@
 }
 
 .mysql {
+    width: 100%;
     height: 100%;
+    overflow: scroll;
+    background: #f1f1f1;
+}
+
+.mysql-form-container {
+    flex: 0.3;
+    height: 100%;
+    overflow: scroll;
+    background: white;
+}
+
+.mysql-editor-container {
+    flex: 0.7;
+    min-width: 400px;
+    height: 100%;
+}
+
+.mysql-form-item {
+    flex: 1;
+}
+
+.mysql-connection-panel {
+    border: 1px #f1f1f1 solid;
+    border-radius: 4px;
+    margin: 12px;
+    padding: 12px;
 }
